<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <ListView
        android:layout_width="fill_parent"
        android:id="@+id/lvTodos"
        android:layout_weight="1"
        android:layout_height="150dp"></ListView>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNewTask"
        android:hint="@string/edittext_hint_new_task"
        android:visibility="gone">
        <requestFocus></requestFocus>
    </EditText>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNewTask2"
        android:hint="@string/edittext_hint_new_task"
        android:visibility="gone">
        <requestFocus></requestFocus>
    </EditText>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llNewTaskButtons"
        android:visibility="gone">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnSave"
            android:text="@string/button_save"></Button>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnCancel"
            android:text="@string/button_cancel"></Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llEditTaskButtons"
        android:visibility="gone">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnEditTask"
            android:text="@string/button_edit"></Button>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnCancelEditTask"
            android:text="@string/button_cancel"></Button>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llControlButtons">
        <Button
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnAddNew"
            android:text="@string/button_add"
            android:layout_width="fill_parent"></Button>
        <Button
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/btnClearCompleted"
        android:text="@string/button_clear"
        android:layout_width="fill_parent"></Button>
        <Button
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnEditCompleted"
            android:text="@string/button_edit"
            android:layout_width="fill_parent"></Button>
    </LinearLayout>
    <Button
        android:layout_height="45dp"
        android:id="@+id/buttonNewActive"
        android:text="@string/button_edit"
        android:layout_width="fill_parent"
        tools:text="Open Book Activity"></Button>
</LinearLayout>